# momo

./: CLAUDE.md  CMakeLists.txt  PLAN.md
docs/: architecture.md  building.md  known-issues.md  language.md
src/: CMakeLists.txt  core.cpp  eval.cpp  log.cpp  log.h  momo.cpp  momo.h  reader.cpp  reader.h  tokenizer.cpp  tokenizer.h  types.cpp  utils.cpp
tests/: CMakeLists.txt  test_ako.cpp  test_bool.cpp  test_colon.cpp  test_core.cpp  test_env.cpp  test_eval.cpp  test_funkcija.cpp  test_logger.cpp  test_operators.cpp  test_oznaci.cpp  test_reader.cpp  test_tokenizer.cpp  test_types.cpp  test_utils.cpp
